[package]
name = "nostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"     # no_std panic fix.


[profile.dev]
panic = "abort"     # no_std panic fix.

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",                 # Basic Win32 types and functions.
    "Win32_System_LibraryLoader",       # GetModuleHandle (only really needed in debug-builds).
    "Win32_UI_WindowsAndMessaging",     # Most the GUI-related functions.
    "Win32_Graphics_Gdi",               # Functions and structs for drawing.
]